--- a/pom.xml
+++ b/pom.xml
@@ -40,11 +40,11 @@
 			<version>8.1.0</version>
 		</dependency>
 
-		<dependency>
-			<groupId>com.corundumstudio.socketio</groupId>
-			<artifactId>netty-socketio</artifactId>
-			<version>1.7.17</version>
-		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>com.corundumstudio.socketio</groupId>-->
+<!--			<artifactId>netty-socketio</artifactId>-->
+<!--			<version>1.7.17</version>-->
+<!--		</dependency>-->
 	</dependencies>
 
 	<build>
