--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 server.port = 8083
-socket-server.port=8085
-socket-server.host=192.168.1.12
+#socket-server.port=8085
+#socket-server.host=192.168.1.101
